...
                    android:text="@string/go_back_button"
                    android:textSize="16sp"
                    style="@style/RedButtonStyle"/>
            </LinearLayout>
            <!-- Collector Name -->
            <TextView
                android:id="@+id/collectorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:textAllCaps="true"
                android:textSize="34sp" />

            <!-- Collector Telephone -->
            <TextView
                android:id="@+id/collectorTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:textAllCaps="true"
                android:textSize="14sp" />


            <!-- Collector Email -->
            <TextView
                android:id="@+id/collectorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_regular"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
...
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardBackgroundColor="@color/background_color">
                    <ImageView
                        android:id="@+id/collectorAvatar"
                        android:layout_width="210dp"
                        android:layout_height="210dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_collector_image"
                        android:contentDescription="@string/portada_coleccionista"
                        tools:ignore="ContentDescription" />
...
                    android:layout_marginBottom="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <!-- RecyclerView to show list of favorite performers -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favorite_performers_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp" />


            </LinearLayout>
...
