...
    <item
        android:id="@+id/navigation_artist"
        android:icon="@drawable/icon_artist"
        android:title="@string/title_artist" />

    <item
        android:id="@+id/navigation_collector"
        android:icon="@drawable/icon_collector"
        android:title="@string/title_collector" />

</menu>
