<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Vinyl image -->
    <ImageView
        android:id="@+id/vinylImage"
        android:layout_width="371dp"
        android:layout_height="367dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-159dp"
        android:layout_marginEnd="-154dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/HU00_title"
        android:scaleType="centerCrop"
        android:src="@drawable/vinyl" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:id="@+id/createAlbumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:textAllCaps="true"
                android:textSize="34sp"
                android:text="@string/title_create_album"/>

            <!-- Album Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_album_field"
                    android:textColor="@color/white"
                    android:maxLength="100"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Album Cover -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumCoverInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url_field"
                    android:textColor="@color/white"
                    android:inputType="textUri"
                    android:autofillHints="webAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Album Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumReleaseDateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release_date_album_field"
                    android:textColor="@color/white"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Album Description -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_album_field"
                    android:textColor="@color/white"
                    android:maxLength="500"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Album Genre -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumGenreInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/genre_album_field"
                    android:textColor="@color/white"
                    android:maxLength="55"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Album Record Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                style="?attr/textInputOutlinedStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/albumRecordLabelInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recordlabel_album_field"
                    android:textColor="@color/white"
                    android:maxLength="100"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_album_button"
                    style="@style/ButtonAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/cancel_album_button"
                    app:icon="@android:drawable/ic_menu_revert"
                    app:iconGravity="textStart"
                    app:iconTint="@color/black" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveButton"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:text="@string/save_album_button"
                    app:icon="@android:drawable/ic_menu_add"
                    app:iconGravity="textStart"
                    app:iconTint="@color/orange" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
