<resources>
    <string name="app_name">MISW4203 - Proyecto Vinilos</string>
    <string name="HU00_title">Miso</string>
    <string name="HU00_subtitle">Music</string>
    <string name="HU00_user_input">Usuario</string>
    <string name="HU00_password_input">Contraseña</string>
    <string name="HU00_login_button">Login</string>
    <string name="HU00_login_alt_button">Ingresar como visitante</string>
    <string name="HU00_divider_text">ó</string>
    <string name="title_list_albums">Álbumes</string>
    <string name="search_album_hint">BUSCAR</string>
    <string name="add_album">+ AGREGAR ÁLBUM</string>
    <string name="title_activity_bottom_bar">BottomBarActivity</string>
    <string name="title_album">Albumes</string>
    <string name="title_artist">Artistas</string>
    <string name="title_collector">Coleccionistas</string>
    <string name="add_track">+ AGREGAR TRACK</string>
    <string name="duration">Duration</string>
...
    <string name="name_album_field">Nombre del álbum</string>
    <string name="url_field">URL de la portada</string>
    <string name="release_date_album_field">Fecha de lanzamiento (YYYY-MM-DD)</string>
    <string name="description_album_field">Descripción</string>
    <string name="genre_album_field">Género</string>
    <string name="recordlabel_album_field">Discográfica</string>
    <string name="save_album_button">Agregar</string>
    <string name="title_create_album">Crear Álbum</string>
    <string name="cancel_album_button">Cancelar</string>
    <string name="duration_add_track">Duración (MM:ss)</string>
    <string name="name_add_track">Nombre del track</string>
    <string name="add_track_album">Crear Track</string>
    <string name="title_add_track_album">Agregar Track</string>
    <string name="title_add_album_artist">ASOCIAR ÁLBUM A ARTISTA</string>
    <string name="button_add_album_artist">+ ASOCIAR ÁLBUM</string>
...
