...
                    android:layout_gravity="center_horizontal" />

            </FrameLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/addAlbumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                app:icon="@android:drawable/ic_menu_add"
                app:iconGravity="textStart"
...
